--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    
   </style>
 </head>
 <body>
@@ -47,8 +46,8 @@
     </div>
   </main>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</br> 
-    Coded by <a href="https://github.com/alejandroszg">Alejandro Sánchez</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</br>
+    Coded by <a href="https://github.com/alejandroszg">Alejandro Sánchez</a>.</p>
   </div>
 </body>
 </html>
