--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       </div>
     </div>
   </main>
-  <div class="attribution">
+  <footer class="attribution">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</br>
     Coded by <a href="https://github.com/alejandroszg">Alejandro Sánchez</a>.</p>
-  </div>
+    </footer>
 </body>
 </html>
